--- a/src/assets/addPost.html
+++ b/src/assets/addPost.html
@@ -9,8 +9,8 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
     <!--  owl carousel plugin -->
-    <link rel="stylesheet" href="css/owl/owl.carousel.css">
-    <link rel="stylesheet" href="css/owl/owl.theme.default.css">
+    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="css/owl.theme.default.css">
     <link rel="stylesheet" href="css/owl/owl.theme.green.css">
 
     <link rel="stylesheet" href="css/bootsnav.css">
@@ -283,7 +283,7 @@
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/bootsnav.js"></script>
-<script src="js/owl/owl.carousel.js"></script>
+<script src="js/owl.carousel.js"></script>
 <script src="js/main.js"></script>
 
 </body>
