--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title></title>
-    <base href="/">
+    <title>Crowdfunding</title>
+    <base href="/project/cf/">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
+
 
     <!--  owl carousel plugin -->
     <link rel="stylesheet" href="assets/css/owl/owl.carousel.css">
     <link rel="stylesheet" href="assets/css/owl/owl.theme.default.css">
     <link rel="stylesheet" href="assets/css/owl/owl.theme.green.css">
-
     <link rel="stylesheet" href="assets/css/bootsnav.css">
     <link rel="stylesheet" href="assets/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
@@ -30,16 +30,10 @@
 <!-------------------------------------------------------------------->
 <!-- Script files -->
 
-<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-<script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+<!--
 <script src="assets/js/bootsnav.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
-<script src="assets/js/owl/owl.carousel.js"></script>
-<script src="assets/js/main.js"></script>
-<script>
-        $(".nav-tabs a").click(function () {
-            $(this).tab('show');
-        });
-</script>
+<script src="assets/js/owl.carousel.js"></script>
+<script src="assets/js/main.js"></script>-->
 </body>
 </html>
